layout background, contrast fix, incremental static generation

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,11 +65,13 @@ em {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background: #e9e9e9;
 }
 
 header {
   text-align: center;
-  margin: 60px 0;
+  padding: 60px 0 80px;
+  background: #fff;
 }
 
 header a {
@@ -89,18 +91,18 @@ header span {
 }
 
 header span:first-child {
-  font-size: 1em;
+  font-size: 0.8em;
   font-weight: 400;
 }
 
 header span:last-child {
   color: firebrick;
-  font-size: 1.5em;
+  font-size: 1.3em;
   font-weight: 900;
 }
 
 header h2 {
-  font-size: 1.2em;
+  font-size: 1em;
   font-weight: 400;
 }
 
@@ -114,6 +116,21 @@ footer {
 
 .page-content {
   width: min(100%, 1600px);
-  margin: 20px auto 80px;
-  padding: 0 20px;
+  margin: 0 auto;
+  padding: 0 20px 80px;
+  background: #fff;
+}
+
+@media screen and (min-width: 600px) {
+  header span:first-child {
+    font-size: 1em;
+  }
+
+  header span:last-child {
+    font-size: 1.5em;
+  }
+
+  header h2 {
+    font-size: 1.2em;
+  }
 }
